<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="aq.metallists.freundschaft.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_channellist"
        android:name="aq.metallists.freundschaft.ui.netlist.NetlistFragment"
        android:label="@string/menu_netlist"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="aq.metallists.freundschaft.ui.settings.SettingsPage"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>